--- a/_posts/2022-03-10-[Basic]-오브젝트-파괴하지-않고-씬-불러오기.md
+++ b/_posts/2022-03-10-[Basic]-오브젝트-파괴하지-않고-씬-불러오기.md
@@ -16,11 +16,11 @@ comments: true
 
 우선 확인하기 위한 셋팅을 좀 해보자.
 
-![image-20220310094718632](C:\Users\ksc52\AppData\Roaming\Typora\typora-user-images\image-20220310094718632.png)
+![image](https://user-images.githubusercontent.com/101051124/157568118-ba317dec-a0f1-429e-953a-52257704eb3e.png)
 
 이게 Scene1의 모습이고,
 
-![image-20220310094745907](C:\Users\ksc52\AppData\Roaming\Typora\typora-user-images\image-20220310094745907.png)
+![image](https://user-images.githubusercontent.com/101051124/157568196-b4064555-5b12-4d28-8ccd-b7aef5ad03ea.png)
 
 이게 Scene2의 모습이다. 이제 여기서 스페이스바를 눌렀을 때 Scene1의 스피어 오브젝트는 파괴되지 않고 Scene2를 불러오는 법을 설명하겠다.
 
@@ -35,7 +35,7 @@ comments: true
 
 위 코드의 결과로 다음과 같은 결과가 나온다.
 
-![image-20220310095102991](C:\Users\ksc52\AppData\Roaming\Typora\typora-user-images\image-20220310095102991.png)
+![image](https://user-images.githubusercontent.com/101051124/157568257-e5ec73f2-866b-49e0-b532-f49795c294f2.png)
 
 위 사진과 같이 Scene2에 원래는 없더 스피어 오브젝트가 남은 상태로 씬이 불러와졌다. 그럼 저 스피어 오브젝트는 파괴할 수 없을까? 아니다 방법이 있다! 바로 평상시와 같이 **Destroy함수**를 사용하면 파괴가 가능하다!
 
@@ -47,13 +47,13 @@ comments: true
 
 1)원래 DontDestroy오브젝트가 있던 씬에서 새로운 씬을 불러오고 다시 원래 DontDestroy오브젝트가 있는 씬을 부를 때를 생각해보자. 
 
-![image-20220310095552140](C:\Users\ksc52\AppData\Roaming\Typora\typora-user-images\image-20220310095552140.png)
+![image](https://user-images.githubusercontent.com/101051124/157568312-ef8df4bb-96fa-40eb-9ffe-89f3e25747a0.png)
 
 DontDestroy오브젝트는 게임이 시작 되었을 때 DontDestroyLoad영역에 넣어지기 때문에 새로운 씬을 불러도 파괴되지 않는다. 하지만 여기서 문제가 생긴다 한 번 새로운 씬을 불렀다가 다시 원래의 씬을 불러오도록 코드를 작성하고 반복해서 실행해 보겠다.
 
 
 
-![image-20220310100033339](C:\Users\ksc52\AppData\Roaming\Typora\typora-user-images\image-20220310100033339.png)
+![image-20220310102212360](C:\Users\ksc52\AppData\Roaming\Typora\typora-user-images\image-20220310102212360.png)
 
 위 사진과같이 오브젝트가 계속 추가 되는 것을 볼 수 있다. 이러면 우리가 생각한 모습이 나오지 못할 수 있다. 그럼 해결책이 제시하겠다. 
 
