--- a/_posts/2022-03-10-[UI]-Button.md
+++ b/_posts/2022-03-10-[UI]-Button.md
@@ -45,3 +45,13 @@ Animation타입을 사용한다 여기서 하위 프로퍼티 중 고칠 것은 
 
 위와 같이 Button 컴포넌트를 가져와서 onClick.AddListener(함수명);을 사용하면 인스펙터 창에서 함수를 등록한 것과 동일한 작동을 하게 된다.
 
+<br>
+
+## 꿀팁
+
+그리고 모바일등 화면이 작은곳에서 버튼을 사용하면 터치를 잘 못 하거나 잘 인식이 안되는 경우가 있을 수 있다.(버튼이 작아서) 이럴때 해결하는 방법이 있다. 버튼 게임 오브젝트의 자식 오브젝트로 Image 게임 오브젝트를 넣고 내가 원하는 터치 범위까지 크기를 늘리고 Image의 색상에서 알파값을 0으로 만들어 투명하게 만들면 그 범위까지 터치가 가능하다. 이러한 이유는 Image 게임 오브젝트가 Button 게임 오브젝트의 자식 게임 오브젝트이기 때문이다.
+
+![image](https://user-images.githubusercontent.com/101051124/157646722-368f614c-8ab3-4427-8a21-02302d23e697.png)
+
+![image](https://user-images.githubusercontent.com/101051124/157646818-410e70f8-2b4e-4c1f-a829-d700cc764da8.png)
+
