--- a/_posts/2022-03-10-[Basic]-오브젝트-파괴하지-않고-씬-불러오기.md
+++ b/_posts/2022-03-10-[Basic]-오브젝트-파괴하지-않고-씬-불러오기.md
@@ -39,9 +39,7 @@ comments: true
 
 위 사진과 같이 Scene2에 원래는 없더 스피어 오브젝트가 남은 상태로 씬이 불러와졌다. 그럼 저 스피어 오브젝트는 파괴할 수 없을까? 아니다 방법이 있다! 바로 평상시와 같이 **Destroy함수**를 사용하면 파괴가 가능하다!
 
-하지만 이렇게 DontDestroyLoad를 써서 오브젝트가 새로운 씬을 불러올 때 파괴되지 않게 하는 방법
-
-주의사항이 있다.
+하지만 이렇게 DontDestroyLoad를 써서 오브젝트가 새로운 씬을 불러올 때 파괴되지 않게 하는 방법에는 주의사항이 있다.
 
 # 주의 사항
 
